# webdev_tutorial

./: .travis.yml  Cargo.toml  Makefile  README.md  Web Service Tutorial.postman_collection.json  build.rs  docker-compose.yml  env.example  init.sql  rustfmt.toml
docker/: Dockerfile
dtypes/structs/: error_message.rs  mod.rs
scripts/: db_url.sh
sql/: auth.sql  blog.sql  tag.sql
src/: db.rs  main.rs
src/dtypes/structs/: auth.rs  blog.rs  error_message.rs  mod.rs  tag.rs
src/middleware/: capture_uri.rs  handle_cors.rs  jwt_auth.rs  mod.rs
src/routes/: auth.rs  blog.rs  mod.rs  tag.rs
src/utils/: handle_sql_error.rs  mod.rs
