[package]
name = "webdev_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = {version = "1.0.160", features = ["derive"]}
dotenv = "0.15.0"
serde_json = "1.0.96"
sqlx = {version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros"]}
