[package]
name = "webdev_guide"
version = "0.5.0"
edition = "2021"
authors = ["Elijah Samson <elijahobara357@gmail.com>"]
description = "Learn how to build a webservice in Rust!"
repository = "https://github.com/obaraelijah/webdev_tutorial"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/webdev_guide/latest"
build = "build.rs"
readme = "README.md"
licence = "MIT OR APACHE-2.0"

[badges]
docs-rs = { repository = "https://docs.rs/webdev_guide", branch = "main", mode = "light" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
features = ["default"]
rustc = "1.75.0-nightly (608e9682f 2024-03-09)"
docsrs = "0.5.0 (45c814ae 2024-03-09)"


[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.27.0", features = ["full"]}
chrono = {version = "0.4.28", features = ["serde"]}
sqlx = {version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros"]}
actix-cors = "0.6.4"
uuid = { version = "1.4.1", features = ["serde"] }
argon2 = "0.5.2"
jsonwebtoken = "9.1.0"
futures = "0.3.28"
base64 = "0.21.4"

[build-dependencies]
dotenv = "0.15.0"